# data-team-multi-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  HUMAN_IN_THE_LOOP_STEPS.md  IMPLEMENTATION_STEPS.md  Makefile  README.md  docker-compose.yml  install.sh  main.py  pyproject.toml  setup.sh
agents/: __init__.py  registry.py  runner.py  skill_loader.py  task_loader.py  tasks.md
agents/data_analyst/: SKILLS.md  agent.md  app.py  skill_loader.py
agents/data_architect/: Dockerfile  SKILLS.md  agent.md  app.py  skill_loader.py
agents/data_engineer/: SKILLS.md  agent.md  app.py  skill_loader.py
agents/data_steward/: SKILLS.md  agent.md  app.py  entrypoint.sh  skill_loader.py
agents/qa_engineer/: SKILLS.md  agent.md  app.py  skill_loader.py
agents/requirements_analyst/: SKILLS.md  agent.md  app.py
config/: default.json
harness/: __init__.py  fakes.py  run.py
logs/data_architect/: latest_specs.json  latest_work_item.json
roadmap/: README.md  sprint-01-feedback-loop.md  sprint-02-middleware-hooks.md  sprint-03-observability.md  sprint-04-checkpointing-typed-state.md  sprint-05-persistent-memory.md  sprint-06-context-management.md  sprint-07-tao-loop-tools.md  sprint-08-agent-task-refinement.md  sprint-09-filesystem-workspace.md  sprint-09-policy-governance.md  sprint-10-code-execution.md  sprint-10-offline-replay.md  sprint-11-agent-delegation.md  sprint-11-evaluation-scorecards.md  sprint-12-human-feedback-dataset.md  sprint-12-inagent-task-planning.md  sprint-13-mcp-integration.md  sprint-13-planning-optimizer.md  sprint-14-provider-registry.md  sprint-14-release-readiness.md
shared_skills/: __init__.py
shared_skills/ado_integration/: __init__.py
shared_skills/agent_base/: __init__.py
shared_skills/agent_runtime/: __init__.py
tests/: __init__.py  conftest.py  test_ado_integration.py  test_agent_logging.py  test_agent_modularity.py  test_approval_server.py  test_approvals.py  test_artifacts.py  test_config.py  test_data_analyst.py  test_data_architect.py  test_data_engineer.py  test_data_steward.py  test_events.py  test_harness_workflow.py  test_llm_integration.py  test_process_next_item.py  test_qa_engineer.py  test_requirements_analyst.py  test_shared_skill_config.py  test_sprints_9_14_foundations.py  test_state_loop.py  test_teams_payload.py  test_tools_and_types.py
(+56 files in other folders)
